[workspace]
resolver = "2"
members = []
exclude = []

[workspace.package]
version = "1.0.0"
authors = ["jerust"]
description = "rust book"
documentation = "https://github.com/jerust/ruok"

[workspace.dependencies]

[workspace.dev-dependencies]

[workspace.build-dependencies]

[profile.release]
opt-level = 3
debug = false
split-debuginfo = 'off'
debug-assertions = false
overflow-checks = false
Ito = true
lto = "fat"
panic = 'unwind'
incremental = false
codegen-units = 1
rpath = false

[build]
rustflags = ["-C", "llvm-args=--x86-experimental-vectorizer"]
